{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 6,
  "lineage": "57d8ea9f-8cde-e883-9923-2b7e71d81b59",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "tcw_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107190336424:security-group/sg-07669d2f51270c167",
            "description": "Allow all inbound traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tcw_security_group"
                ]
              }
            ],
            "id": "sg-07669d2f51270c167",
            "name": "tcw_security_group",
            "tags": {
              "Name": "tcw_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8271fd00b4a8dc8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_available",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:107190336424:vpc/vpc-0e8271fd00b4a8dc8",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a2c609688384e815",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09c0c9bf419d1db67",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tcw_vpc"
                ]
              }
            ],
            "id": "vpc-0e8271fd00b4a8dc8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0974d631b826fb238",
            "owner_id": "107190336424",
            "tags": {
              "Name": "tcw_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tcw_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:107190336424:loadbalancer/app/tcw-alb/aa93459f6a275077",
            "arn_suffix": "app/tcw-alb/aa93459f6a275077",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tcw-alb-833156420.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:107190336424:loadbalancer/app/tcw-alb/aa93459f6a275077",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tcw-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07669d2f51270c167"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012028828f1f1baef"
              },
              {
                "subnet_id": "subnet-0efaa2b91b44d49e5"
              }
            ],
            "subnets": [
              "subnet-012028828f1f1baef",
              "subnet-0efaa2b91b44d49e5"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0e8271fd00b4a8dc8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_security_group.tcw_sg",
            "data.aws_subnets.available_db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_forward_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:107190336424:listener/app/tcw-alb/aa93459f6a275077/76a09a104c2da568",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:107190336424:targetgroup/tcw-tg/29d2b45e060ed355",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:107190336424:listener/app/tcw-alb/aa93459f6a275077/76a09a104c2da568",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:107190336424:loadbalancer/app/tcw-alb/aa93459f6a275077",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tcw_alb",
            "aws_lb_target_group.tcw_tg",
            "data.aws_security_group.tcw_sg",
            "data.aws_subnets.available_db_subnet",
            "data.aws_vpc.vpc_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tcw_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:107190336424:targetgroup/tcw-tg/29d2b45e060ed355",
            "arn_suffix": "targetgroup/tcw-tg/29d2b45e060ed355",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:107190336424:targetgroup/tcw-tg/29d2b45e060ed355",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tcw-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8271fd00b4a8dc8"
          },
          "dependencies": [
            "data.aws_vpc.vpc_available"
          ]
        }
      ]
    }
  ]
}